--- a/examples/hw1/css/styles.css
+++ b/examples/hw1/css/styles.css
@@ -2,6 +2,9 @@ body {
     background-color: #74c1c3;
     background-image: linear-gradient(to bottom right, #9DBCB3, #2FC7DD, #37B8E9);
 }
+body hr {
+    width: 50% ;
+}
 header, main, nav, footer {
     text-align: center;
 }
@@ -12,7 +15,7 @@ header {
     display: block;
     font-family: 'Major Mono Display', monospace;
 }
-main {
+main, #content {
     font-family: 'Robot', sans-serif;
 }
 nav a {
@@ -28,8 +31,113 @@ nav a:hover {
     color: #77CB6D;
     transform: scale(1.5);
 }
-
+.active {
+    background-color: #50AD55;
+}
 welcomeImg img{
     width: 300px;
     height: 30%;
+}
+
+/*statistics*/
+#table #table-title {
+    padding-bottom: 10px;
+}
+#table #table-title a {
+    text-decoration: none;
+    font-family: 'Major Mono Display', monospace;
+    font-size: 2.4em;
+    color: #F07060;
+    background-color: white;
+}
+#content #table {
+    margin: 0px auto;
+}
+#table {
+    position: relative;
+    display: inline-block;
+}
+#table .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #F9F9F9;
+    min-width: 200px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+}
+#table:hover .dropdown-content {
+    display: block;
+}
+#content #table
+.tg #table-header {
+    background-color: #744253;
+    font-size: 1.3em;
+    color: #FFCC00;
+}
+.tg .table-row {
+    background-color: #F3D9DC;
+}
+ul {
+    width: 80%;
+    background: #ff9999;
+    padding: 4px;
+}
+ul li {
+    background: #ffe5e5;
+    padding: 5px;
+    margin-left: 35px;
+    list-style-type: square;
+}
+
+/*figures*/
+#content-figures {
+    display: flex;
+    margin: 10px;
+}
+#figure {
+    font-family: 'Robot', sans-serif;
+    background-color: #f7e9cd;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 40%;
+}
+#figure:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    -ms-transform: translate(50px, 100px); /* IE 9 */
+    -webkit-transform: translate(50px, 100px); /* Safari */
+    transform: translate(50px, 100px);
+}
+#figure article a {
+    text-decoration: none;
+    font-size: 1.4em;
+}
+#content-figures div {
+      padding: 2px 16px;
+}
+#content-figures img {
+    width: 100%;
+}
+/*history*/
+#content h2 {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    font-family: 'Major Mono Display', monospace;
+    font-size: 2.4em;
+    color: #F07060;
+    background-color: white;
+    width: 80%;
+}
+#timeline {
+    margin-left: auto;
+    margin-right: auto;
+    padding-right: 100px;
+    display: flex;
+}
+#timeline iframe {
+    margin-right: 20px;
+    width: 50%;
+    height: 800px;
+    border-color: grey;
 }
