Making  sure random numbers are not identical

--- a/Labs/Quiz/css/styles.css
+++ b/Labs/Quiz/css/styles.css
@@ -27,6 +27,10 @@ h1 {
     /*color: #A9A9A9;*/
     color: white;
 }
+#range-div {
+    font-size: 5em;
+    
+}
 #scoreboard {
     float: right;
     width: 35%;
