--- a/Labs/lab5_php/css/styles.css
+++ b/Labs/lab5_php/css/styles.css
@@ -29,22 +29,20 @@ label{
     letter-spacing: 3px;
 
 }
-#passWord {
-    border:dashed;
-}
+
 #passw{
     position: relative;
     width: 400px;
     height: 200px;
-    
+    margin: auto;
 }
 #suggested {
     position: absolute;
+    border:dashed;
     top: 80px;
     right: 50;
     width: 200px;
     height: 100px;
-    border: 3px solid #73AD21;
 }
 #button {
   font-family: 'Alegreya', serif;
