Style css update

--- a/Labs/lab5_php/css/styles.css
+++ b/Labs/lab5_php/css/styles.css
@@ -37,6 +37,7 @@ label{
 #suggested {
     position: absolute;
     border:dashed;
+    margin: auto;
 }
 #button {
   font-family: 'Alegreya', serif;
