--- a/Labs/lab5_php/css/styles.css
+++ b/Labs/lab5_php/css/styles.css
@@ -34,6 +34,7 @@ label{
     border:dashed;
     margin: auto;
     width: 200px;
+    padding: 3px;
 }
 #button {
   font-family: 'Alegreya', serif;
